fix about section height on small viewport

--- a/src/components/Carousel/style.scss
+++ b/src/components/Carousel/style.scss
@@ -18,10 +18,6 @@
     display: flex;
     gap: 1.5rem;
     height: 100%;
-
-    @media (max-width: 767px) {
-      flex-direction: column;
-    }
   }
 
   &__project-details {
@@ -47,12 +43,6 @@
       border-top-right-radius: 0.2rem;
       border-bottom-right-radius: 0.2rem;
     }
-
-    @media (max-width: 767px) {
-      width: 100%;
-      height: 16rem;
-      margin-bottom: 1rem;
-    }
   }
 
   &__image {
@@ -60,11 +50,6 @@
     height: 100%;
     object-fit: contain;
     border-radius: 0.5rem;
-
-    @media (max-width: 767px) {
-      width: 100%;
-      height: 100%;
-    }
   }
 
   &__title {
@@ -126,6 +111,44 @@
 
     &--right {
       inset-inline-end: -5rem;
+    }
+  }
+
+  // Consolidated media queries
+  @media (max-width: 767px) {
+    &__project {
+      flex-direction: column;
+      gap: 0;
+    }
+
+    &__image-container {
+      width: 100%;
+    }
+
+    &__image {
+      width: 100%;
+      height: 100%;
+    }
+
+    &__links {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 1rem;
+    }
+
+    &__project-details {
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__nav-button {
+      &--left {
+        inset-inline-start: 0rem;
+      }
+      &--right {
+        inset-inline-end: -1rem;
+      }
     }
   }
 }
